# CppClone

./: .gitignore  build.sh  compile_flags.txt  imgui.ini  meson.build  premake5.lua  prerequisites.sh  ubuntu_prerequisites.sh
lib/glad/: glad.c
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/shaders/: minecraft.frag  minecraft.vert
src/: main.cpp
src/gfx/: blocktype.h  shader.h  texture_manager.cpp  texture_manager.h  window.cpp  window.h
src/models/: cactus.h  cube.h  model.h  plant.h
src/util/: camera.h  gui.cpp  gui.h  util.cpp  util.h
src/world/: chunk.cpp  chunk.h  world.cpp  world.h
